<resources>
    <string name="app_name">College Scheduler</string>
    <string name="title_class">Classes</string>
    <string name="class_name">Course Name</string>
    <string name="class_instructor">Instructor</string>
    <string name="class_time">Date and Time</string>
    <string name="title_agenda">Agenda</string>
    <string name="title_todo">To Do</string>
    <string name="lists_title">To-Do Lists</string>
    <string name="new_to_do_list">New To-Do List</string>
    <string name="write_here">Write here…</string>
    <string name="add_task">Add Task</string>
    <string name="new_task">New Task…</string>
    <string name="add_class_name">Class name…</string>
    <string name="add_instructor_name">Instructor name…</string>
    <string name="add_assignment">Add Assignment</string>
    <string name="add_exam">Add Exam</string>
    <string name="pick_date">Pick Date</string>
    <string name="assignment_title">Assignment title…</string>
    <string name="assignment_class">Course name…</string>
    <string name="exam_title">Exam title…</string>
    <string name="exam_location">Exam location…</string>
    <string name="exam_course">Course name…</string>
    <string name="add_class">Add Class</string>
</resources>