<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_classes">

    <fragment
        android:id="@+id/navigation_classes"
        android:name="com.example.a2340project1.ui.classes.ClassesFragment"
        android:label="@string/title_class"
        tools:layout="@layout/fragment_classes" />

    <fragment
        android:id="@+id/navigation_agenda"
        android:name="com.example.a2340project1.ui.agenda.AgendaFragment"
        android:label="@string/title_agenda"
        tools:layout="@layout/fragment_agenda" />

    <fragment
        android:id="@+id/navigation_todo"
        android:name="com.example.a2340project1.ui.toDo.ToDoFragment"
        android:label="@string/title_todo"
        tools:layout="@layout/fragment_to_do" />
</navigation>