<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/assignment_grid"
    android:theme="@style/DialogBoxTheme">

    <EditText
        app:backgroundTint="@color/textbox_select_color"
        android:textCursorDrawable="@drawable/text_cursor"
        android:id="@+id/add_assignment_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/assignment_title"
        android:inputType="text"
        android:textColorHint="#DDAAAAAA"
        app:layout_constraintBottom_toTopOf="@+id/assignment_time_picker"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/assignment_date_picker" />

    <EditText
        app:backgroundTint="@color/textbox_select_color"
        android:textCursorDrawable="@drawable/text_cursor"
        android:id="@+id/add_assignment_class"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/assignment_class"
        android:inputType="text"
        android:textColorHint="#DDAAAAAA"
        app:layout_constraintBottom_toTopOf="@+id/assignment_time_picker"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_assignment_name" />

    <TimePicker
        android:theme="@style/TimePickerTheme"
        android:id="@+id/assignment_time_picker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:timePickerMode="spinner"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:background="@drawable/button_shape"
        android:id="@+id/assignment_date_picker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pick_date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>