<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/classGrid"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/round_grey"
    android:layout_margin="10dp">

    <EditText
        android:id="@+id/class_name"
        android:layout_width="183dp"
        android:layout_height="47dp"
        android:layout_marginStart="40dp"
        android:ems="10"
        android:inputType="text"
        android:text="@string/class_name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.156" />

    <EditText
        android:id="@+id/class_instructor"
        android:layout_width="175dp"
        android:layout_height="43dp"
        android:layout_marginStart="40dp"
        android:ems="10"
        android:inputType="text"
        android:text="@string/class_instructor"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/class_time"
        android:layout_width="175dp"
        android:layout_height="43dp"
        android:layout_marginStart="40dp"
        android:ems="10"
        android:inputType="text"
        android:text="@string/class_time"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/class_instructor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/class_name" />

    <ImageButton
        android:id="@+id/edit_class"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="16dp"
        android:background="@android:color/transparent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/class_instructor"
        app:layout_constraintTop_toBottomOf="@+id/delete_class"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@android:drawable/ic_menu_edit" />

    <ImageButton
        android:id="@+id/delete_class"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:background="@android:color/transparent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/class_name"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.264"
        app:srcCompat="@android:drawable/ic_menu_delete" />

</androidx.constraintlayout.widget.ConstraintLayout>